fix css alignment of dashboard

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -8,8 +8,11 @@
   height: 100vh;
 
   .bottomImage{
-    position: absolute;
+    position: fixed;
+    left: 0;
     bottom: 0;
     width: 100%;
+    text-align: center;
+    height: 10%;
   }
 }
