--- a/frontend/src/components/common/home.scss
+++ b/frontend/src/components/common/home.scss
@@ -1,3 +1,3 @@
 body{
-    background-color: #E8E7E7;
+    background-color: #093545;
 }
